{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 17,
  "lineage": "252fe002-788b-0cd8-0899-0b678e5d6155",
  "resources": [
    {
      "module": "module.gke",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    }
  ]
}